Adding registration mode.

--- a/translations/en.json
+++ b/translations/en.json
@@ -261,7 +261,9 @@
     "downvote": "Downvote",
     "number_of_downvotes": "{{formattedCount}} Downvote",
     "number_of_downvotes_plural": "{{formattedCount}} Downvotes",
+    "registration_mode": "Registration Mode",
     "open_registration": "Open Registration",
+    "close_registration": "Close Registration",
     "registration_closed": "Registration closed",
     "enable_nsfw": "Enable NSFW",
     "url": "URL",
