--- a/translations/en.json
+++ b/translations/en.json
@@ -449,5 +449,18 @@
     "feature_in_local": "Feature in Local",
     "unfeature_from_local": "Unfeature in Local",
     "feature_in_community": "Feature in Community",
-    "unfeature_from_community": "Unfeature in Community"
+    "unfeature_from_community": "Unfeature in Community",
+    "deleted_emoji": "Deleted Emoji",
+    "saved_emoji": "Saved Emoji",
+    "custom_emoji_save_validation": "All fields must be filled in and shortcode can't be duplicated.",
+    "add_custom_emoji": "Add Custom Emoji",
+    "column_keywords": "Keywords (Space Separated)",
+    "column_alttext": "Alt Text",
+    "column_imageurl": "Image Url",
+    "column_shortcode": "Shortcode",
+    "column_category": "Category",
+    "column_emoji": "Emoji",
+    "custom_emojis": "Custom Emojis",
+    "emojis": "Emojis",
+    "emoji": "Emoji"
 }
