--- a/translations/en.json
+++ b/translations/en.json
@@ -462,5 +462,6 @@
     "column_emoji": "Emoji",
     "custom_emojis": "Custom Emojis",
     "emojis": "Emojis",
-    "emoji": "Emoji"
+    "emoji": "Emoji",
+    "site": "Site"
 }
