--- a/translations/en.json
+++ b/translations/en.json
@@ -404,6 +404,7 @@
     "require_email_verification": "Require email verification",
     "require_registration_application": "Require registration application",
     "application_email_admins": "Email admins on receiving new applications",
+    "reports_email_admins": "Email admins on receiving new reports",
     "private_instance": "Private Instance",
     "registration_application_pending": "Registration approval pending.",
     "registration_denied": "Registration application denied.",
