--- a/translations/en.json
+++ b/translations/en.json
@@ -331,6 +331,7 @@
     "parent_comment_not_in_post": "The parent comment belongs to another post.",
     "no_slurs": "No slurs.",
     "not_an_admin": "Not an admin.",
+    "not_top_admin": "Not the top admin.",
     "not_a_moderator": "Not a moderator.",
     "not_a_mod_or_admin": "Not a moderator or admin.",
     "site_already_exists": "Site already exists.",
