--- a/translations/en.json
+++ b/translations/en.json
@@ -471,5 +471,6 @@
     "set_up_two_factor": "Set up 2-factor authentication",
     "two_factor_link": "2FA installation link",
     "two_factor_setup_instructions": "After you click save, and the page reloads, scroll down and click '2FA installation link' to add it to your authenticator.",
-    "remove_two_factor": "Remove 2-factor authentication"
+    "remove_two_factor": "Remove 2-factor authentication",
+    "two_factor_token": "2FA Token"
 }
