Adding enter_code

--- a/translations/en.json
+++ b/translations/en.json
@@ -469,6 +469,7 @@
     "missing_totp_token": "TOTP token is missing",
     "incorrect_totp_token": "Incorrect TOTP token",
     "set_up_two_factor": "Set up 2-factor authentication",
+    "enter_two_factor_code": "Enter your 2FA code",
     "two_factor_link": "2FA installation link",
     "two_factor_setup_instructions": "After you click save, and the page reloads, scroll down and click '2FA installation link' to add it to your authenticator.",
     "remove_two_factor": "Remove 2-factor authentication",
