--- a/translations/en.json
+++ b/translations/en.json
@@ -253,6 +253,7 @@
     "interface_language": "Interface Language",
     "language": "Language",
     "language_plural": "Languages",
+    "undetermined_language_warning": "Warning: If you deselect Undetermined, you will not see most content.",
     "browser_default": "Browser Default",
     "downvotes_disabled": "Downvotes disabled",
     "enable_downvotes": "Enable Downvotes",
