Update picture upload translations (#34)
* Update picture upload translations

* Undo formatting changes

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -261,8 +261,8 @@
     "list": "قائمة",
     "local": "المحلي",
     "invalid_community_name": "اسم غير صالح.",
-    "click_to_delete_picture": "أنقر لحذف الصورة.",
-    "picture_deleted": "حُذفت الصورة.",
+    "click_to_delete_picture": "أنقر لحذف الصورة: {{filename}}",
+    "picture_deleted": "حُذفت الصورة: {{filename}}",
     "number_of_downvotes_0": "بدون معارضات",
     "number_of_downvotes_1": "معارضة واحدة",
     "number_of_downvotes_2": "معارضتان",
