--- a/translations/bg.json
+++ b/translations/bg.json
@@ -169,8 +169,8 @@
     "delete": "изтрий",
     "deleted": "изтрито от създателя",
     "delete_account": "Изтрий Профила",
-    "click_to_delete_picture": "Натинси за изтриване на снимката.",
-    "picture_deleted": "Снимка изтрита.",
+    "click_to_delete_picture": "Натинси за изтриване на снимката: {{filename}}",
+    "picture_deleted": "Снимка изтрита: {{filename}}",
     "restore": "възстанови",
     "ban": "блокирай",
     "ban_from_site": "блокирай от сайта",
