--- a/translations/ca.json
+++ b/translations/ca.json
@@ -214,8 +214,8 @@
     "couldnt_update_private_message": "No s’ha pogut actualitzar el missatge privat.",
     "cross_posted_to": "publicat també a: ",
     "invalid_username": "El nom d’usuari no és vàlid.",
-    "click_to_delete_picture": "Feu clic per a suprimir la imatge.",
-    "picture_deleted": "S’ha suprimit la imatge.",
+    "click_to_delete_picture": "Feu clic per a suprimir la imatge: {{filename}}",
+    "picture_deleted": "S’ha suprimit la imatge: {{filename}}",
     "invalid_community_name": "El nom no és vàlid.",
     "sorting_help": "ajuda amb l’ordenament",
     "old": "Antic",
