--- a/translations/cs.json
+++ b/translations/cs.json
@@ -102,9 +102,9 @@
     "mark_as_unread": "označit jako nepřečtené",
     "delete": "smazat",
     "delete_account": "Smazat účet",
-    "picture_deleted": "Obrázek smazán.",
+    "picture_deleted": "Obrázek smazán: {{filename}}",
     "delete_account_confirm": "Upozornění: toto trvale vymaže všechna vaše data z této instance. Vaše data nemusí být odstraněna z jiných existujících instancí. Zadejte své heslo pro potvrzení.",
-    "click_to_delete_picture": "Klikněte pro smazání obrázku.",
+    "click_to_delete_picture": "Klikněte pro smazání obrázku: {{filename}}",
     "save": "uložit",
     "create": "vytvořit",
     "username": "Uživatelské jméno",
