--- a/translations/da.json
+++ b/translations/da.json
@@ -111,8 +111,8 @@
     "delete": "slet",
     "deleted": "slettet af forfatter",
     "delete_account": "Slet Konto",
-    "click_to_delete_picture": "Klik for at slette billedet.",
-    "picture_deleted": "Billede slettet.",
+    "click_to_delete_picture": "Klik for at slette billedet: {{filename}}",
+    "picture_deleted": "Billede slettet: {{filename}}",
     "restore": "genskab",
     "ban": "forbyd indlæg",
     "ban_from_site": "forbyd fra forum",
