--- a/translations/de.json
+++ b/translations/de.json
@@ -235,8 +235,8 @@
     "number_of_downvotes": "{{formattedCount}} Gegenstimme",
     "number_of_downvotes_plural": "{{formattedCount}} Gegenstimmen",
     "invalid_community_name": "Ungültiger Name.",
-    "click_to_delete_picture": "Klicke, um das Bild zu löschen.",
-    "picture_deleted": "Bild gelöscht.",
+    "click_to_delete_picture": "Klicke, um das Bild zu löschen: {{filename}}",
+    "picture_deleted": "Bild gelöscht: {{filename}}",
     "select_a_community": "Wähle eine Community aus",
     "invalid_username": "Ungültiger Benutzername.",
     "bold": "fett",
