--- a/translations/eo.json
+++ b/translations/eo.json
@@ -165,10 +165,10 @@
     "number_of_communities_plural": "{{formattedCount}} Komunumoj",
     "more": "pli",
     "select_a_community": "Elekti Komunumon",
-    "click_to_delete_picture": "Klaku por forigi bildon.",
+    "click_to_delete_picture": "Klaku por forigi bildon: {{filename}}",
     "cross_posted_to": "transafiŝita al: ",
     "invalid_community_name": "Nevalida nomo.",
-    "picture_deleted": "Bildo foriĝis.",
+    "picture_deleted": "Bildo foriĝis: {{filename}}",
     "create_private_message": "Krei Privatan Mesaĝon",
     "send_secure_message": "Sendi Sekuran Mesaĝon",
     "avatar": "Profilbildo",
