--- a/translations/es.json
+++ b/translations/es.json
@@ -236,8 +236,8 @@
     "select_a_community": "Selecciona una comunidad",
     "invalid_username": "Nombre de usuario inválido.",
     "invalid_community_name": "Nombre no válido.",
-    "click_to_delete_picture": "Pulse para eliminar la imagen.",
-    "picture_deleted": "Imagen eliminada.",
+    "click_to_delete_picture": "Pulse para eliminar la imagen: {{filename}}",
+    "picture_deleted": "Imagen eliminada: {{filename}}",
     "italic": "cursiva",
     "subscript": "subíndice",
     "superscript": "superíndice",
