--- a/translations/eu.json
+++ b/translations/eu.json
@@ -60,8 +60,8 @@
     "number_of_subscribers": "Harpidetu {{formattedCount}}",
     "number_of_subscribers_plural": "{{formattedCount}} harpidetu",
     "invalid_community_name": "Izen baliogabea.",
-    "click_to_delete_picture": "Egin klik irudia ezabatzeko.",
-    "picture_deleted": "Irudia ezabatuta.",
+    "click_to_delete_picture": "Egin klik irudia ezabatzeko: {{filename}}",
+    "picture_deleted": "Irudia ezabatuta: {{filename}}",
     "send_secure_message": "Bidali mezu segurua",
     "preview": "Aurrebista",
     "avatar": "Avatarra",
@@ -416,7 +416,7 @@
     "view_all_comments": "Ikusi iruzkin guztiak",
     "too_many_images_upload": "Gehienez irudi {{formattedCount}} igotzeko maximoa gainditu da. Mesedez, hautatu irudi gutxiago.",
     "too_many_images_upload_plural": "Gehienez {{formattedCount}} irudi igotzeko maximoa gainditu da. Mesedez, hautatu irudi gutxiago.",
-    "failed_to_delete_picture": "Irudia ezabatzeak huts egin du.",
+    "failed_to_delete_picture": "Irudia ezabatzeak huts egin du: {{filename}}",
     "interface_language": "Interfazearen hizkuntza",
     "rate_limit_error": "Eskari gehiegi, saiatu berriz beranduago.",
     "federation_debug": "Federazioa arazte moduan",
