--- a/translations/fa.json
+++ b/translations/fa.json
@@ -170,8 +170,8 @@
     "remove_as_mod": "حذف از ناظم‌ها",
     "appoint_as_mod": "انتصاب به عنوان ناظم",
     "leave_mod_team": "ترک گروه ناظم‌ها",
-    "click_to_delete_picture": "برای حذف تصویر، کلیک کنید.",
-    "picture_deleted": "تصویر حذف شد.",
+    "click_to_delete_picture": "برای حذف تصویر، کلیک کنید: {{filename}}",
+    "picture_deleted": "تصویر حذف شد: {{filename}}",
     "ban": "ممنوع",
     "ban_from_site": "ممنوعیت از وب‌گاه",
     "unban": "رفع ممنوعیت",
