--- a/translations/fr.json
+++ b/translations/fr.json
@@ -237,8 +237,8 @@
     "select_a_community": "Sélectionner une Communauté",
     "invalid_username": "Nom d'utilisateur invalide.",
     "invalid_community_name": "Nom invalide.",
-    "click_to_delete_picture": "Cliquer pour supprimer l'image.",
-    "picture_deleted": "Image supprimée.",
+    "click_to_delete_picture": "Cliquer pour supprimer l'image: {{filename}}",
+    "picture_deleted": "Image supprimée: {{filename}}",
     "invalid_post_title": "Titre du post invalide",
     "must_login": "Vous devez vous être <1>connecté ou enregistré</1> pour commenter.",
     "no_password_reset": "Vous ne pourrez pas réinitialiser votre mot de passe sans un e-mail.",
