--- a/translations/ga.json
+++ b/translations/ga.json
@@ -18,8 +18,8 @@
     "delete": "scriosadh",
     "deleted": "scriosta ag cruthaitheoir",
     "delete_account": "Scrios Cuntas",
-    "click_to_delete_picture": "Cliceáil chun pictiúr a scriosadh.",
-    "picture_deleted": "Scriosadh an pictiúr.",
+    "click_to_delete_picture": "Cliceáil chun pictiúr a scriosadh: {{filename}}",
+    "picture_deleted": "Scriosadh an pictiúr: {{filename}}",
     "restore": "athchóirigh",
     "ban": "cosc",
     "ban_from_site": "cosc ón suíomh",
