--- a/translations/gl.json
+++ b/translations/gl.json
@@ -81,8 +81,8 @@
     "mark_as_unread": "marcar como non lido",
     "delete": "eliminar",
     "deleted": "eliminado pola creadora",
-    "click_to_delete_picture": "Preme para eliminar a imaxe.",
-    "picture_deleted": "Imaxe eliminada.",
+    "click_to_delete_picture": "Preme para eliminar a imaxe: {{filename}}",
+    "picture_deleted": "Imaxe eliminada: {{filename}}",
     "ban_from_site": "vetar no sitio",
     "unban": "restablecer",
     "save": "gardar",
@@ -431,7 +431,7 @@
     "rate_limit_message": "Límite da taxa de mensaxes",
     "too_many_images_upload": "Superaches o máximo de {{formattedCount}} imaxe para subidas. Elixe só unha imaxe.",
     "too_many_images_upload_plural": "Superaches o máximo de {{formattedCount}} imaxes para subidas. Elixe menos imaxes.",
-    "failed_to_delete_picture": "Fallou a eliminación da imaxe.",
+    "failed_to_delete_picture": "Fallou a eliminación da imaxe: {{filename}}",
     "interface_language": "Idioma da interface",
     "rate_limit_error": "Demasiadas peticións, inténtao máis tarde.",
     "registration_mode": "Estado do rexistro",
