--- a/translations/hu.json
+++ b/translations/hu.json
@@ -115,8 +115,8 @@
     "overview": "Áttekintés",
     "notifications_error": "Az asztali értesítések nem érhetőek el a böngésződben. Próbáld meg Firefoxszal vagy Chrome-mal!",
     "no_email_setup": "Az email nincs megfelelően beállítva ezen a szerveren.",
-    "click_to_delete_picture": "Kattints a kép törléséhez.",
-    "picture_deleted": "Kép törölve.",
+    "click_to_delete_picture": "Kattints a kép törléséhez: {{filename}}",
+    "picture_deleted": "Kép törölve: {{filename}}",
     "top_day": "Nap legjobbja",
     "month": "hónap",
     "all": "Mind",
