--- a/translations/id.json
+++ b/translations/id.json
@@ -90,8 +90,8 @@
     "delete": "hapus",
     "deleted": "dihapus oleh pembuat",
     "delete_account": "Hapus Akun",
-    "click_to_delete_picture": "Klik untuk menghapus gambar.",
-    "picture_deleted": "Gambar dihapus.",
+    "click_to_delete_picture": "Klik untuk menghapus gambar: {{filename}}",
+    "picture_deleted": "Gambar dihapus: {{filename}}",
     "restore": "pulihkan",
     "ban": "melarang",
     "ban_from_site": "melarang dari situs",
