--- a/translations/it.json
+++ b/translations/it.json
@@ -234,8 +234,8 @@
     "time": "Tempo",
     "action": "Azione",
     "invalid_community_name": "Nome non valido.",
-    "click_to_delete_picture": "Clicca per eliminare la foto.",
-    "picture_deleted": "Foto eliminata.",
+    "click_to_delete_picture": "Clicca per eliminare la foto: {{filename}}",
+    "picture_deleted": "Foto eliminata: {{filename}}",
     "select_a_community": "Seleziona una Comunità",
     "invalid_username": "Nome utente non valido.",
     "what_is": "Cos'è",
@@ -413,7 +413,7 @@
     "filter_by_action": "Filtra per azione",
     "filter_by_mod": "Filtra per moderatori",
     "filter_by_user": "Filtra per utenti",
-    "failed_to_delete_picture": "Non è stato possibile eliminare l'immagine.",
+    "failed_to_delete_picture": "Non è stato possibile eliminare l'immagine: {{filename}}",
     "purge": "",
     "purge_success": "L'elemento è stato eliminato con successo.",
     "listing_type": "Tipo di elenco",
