--- a/translations/ko.json
+++ b/translations/ko.json
@@ -98,8 +98,8 @@
     "mark_as_read": "읽은 상태로 표시",
     "mark_as_unread": "읽지 않은 상태로 표시",
     "deleted": "글쓴이가 글을 삭제하였습니다",
-    "click_to_delete_picture": "사진을 삭제하려면 클릭하세요.",
-    "picture_deleted": "사진이 삭제되었습니다.",
+    "click_to_delete_picture": "사진을 삭제하려면 클릭하세요: {{filename}}",
+    "picture_deleted": "사진이 삭제되었습니다: {{filename}}",
     "restore": "복원",
     "ban": "추방됨",
     "ban_from_site": "사이트에서 추방됨",
@@ -406,7 +406,7 @@
     "hard": "어렵게",
     "federation_debug": "페더레이션 디버그 모드",
     "easy": "쉽게",
-    "failed_to_delete_picture": "이미지 삭제를 하지 못했습니다.",
+    "failed_to_delete_picture": "이미지 삭제를 하지 못했습니다: {{filename}}",
     "rate_limit_error": "요청이 너무 많습니다. 잠시 후 다시 시도해주세요.",
     "rate_limit_comment": "댓글 등록 속도 제한",
     "saved_emoji": "이모지 저장",
