--- a/translations/lt.json
+++ b/translations/lt.json
@@ -84,8 +84,8 @@
     "mark_as_unread": "pažymėti kaip neskaitytą",
     "delete": "pašalinti",
     "deleted": "pašalinta autoriaus",
-    "click_to_delete_picture": "Spauskite, norėdami pašalinti nuotrauką.",
-    "picture_deleted": "Nuotrauka pašalinta.",
+    "click_to_delete_picture": "Spauskite, norėdami pašalinti nuotrauką: {{filename}}",
+    "picture_deleted": "Nuotrauka pašalinta: {{filename}}",
     "restore": "atkurti",
     "ban": "užblokuoti",
     "ban_from_site": "išmesti iš puslapio",
