--- a/translations/ml.json
+++ b/translations/ml.json
@@ -52,7 +52,7 @@
     "mark_as_unread": "വായിക്കാത്തതായി അടയാളപ്പെടുത്തുക",
     "restore": "വീണ്ടെടുക്കുക",
     "banned_users": "നിരോധിച്ച ഉപയോക്താക്കൾ",
-    "picture_deleted": "ചിത്രം ഇല്ലാതാക്കി.",
+    "picture_deleted": "ചിത്രം ഇല്ലാതാക്കി: {{filename}}",
     "title": "ശീർഷകം",
     "description": "വിവരണം",
     "old": "പഴയത്",
@@ -124,7 +124,7 @@
     "next": "അടുത്തത്",
     "sidebar": "സൈഡ്ബാർ",
     "new": "പുതിയത്",
-    "click_to_delete_picture": "ചിത്രം ഇല്ലാതാക്കാൻ ക്ലിക്ക് ചെയ്യുക.",
+    "click_to_delete_picture": "ചിത്രം ഇല്ലാതാക്കാൻ ക്ലിക്ക് ചെയ്യുക: {{filename}}",
     "number_of_users": "{{count}} ഉപയോക്താവ്",
     "number_of_users_plural": "{{count}} ഉപയോക്താക്കൾ",
     "day": "ദിവസം",
