--- a/translations/nl.json
+++ b/translations/nl.json
@@ -234,9 +234,9 @@
     "post_title_too_long": "De berichttitel is te lang.",
     "admin_settings": "Beheerderinstellingen",
     "banned_users": "Verbannen gebruikers",
-    "picture_deleted": "Afbeelding werd verwijderd.",
+    "picture_deleted": "Afbeelding werd verwijderd: {{filename}}",
     "invalid_community_name": "Ongeldige naam.",
-    "click_to_delete_picture": "Klik om de afbeelding te verwijderen.",
+    "click_to_delete_picture": "Klik om de afbeelding te verwijderen: {{filename}}",
     "select_a_community": "Gemeenschap kiezen",
     "invalid_username": "Ongeldige gebruikersnaam.",
     "bold": "Vetgedrukt",
