--- a/translations/oc.json
+++ b/translations/oc.json
@@ -20,7 +20,7 @@
     "invalid_url": "URL invalida.",
     "delete": "suprimir",
     "delete_account": "Suprimir lo compte",
-    "click_to_delete_picture": "Clicatz per suprimir l’imatge.",
+    "click_to_delete_picture": "Clicatz per suprimir l’imatge: {{filename}}",
     "unread_messages": "{{formattedCount}} messatge pas legit",
     "unread_messages_plural": "{{formattedCount}} messatges pas legits",
     "collapse": "Replegar",
@@ -209,7 +209,7 @@
     "mark_as_read": "marcar coma legit",
     "mark_as_unread": "marcar coma pas legit",
     "deleted": "suprimit pel creator",
-    "picture_deleted": "Imatge suprimit.",
+    "picture_deleted": "Imatge suprimit: {{filename}}",
     "save": "enregistrar",
     "creator": "creator",
     "sidebar": "Barra laterala",
