--- a/translations/pl.json
+++ b/translations/pl.json
@@ -254,8 +254,8 @@
     "bio": "Opis",
     "banner": "Baner",
     "upload_banner": "Prześlij baner",
-    "picture_deleted": "Obraz usunięty.",
-    "click_to_delete_picture": "Kliknij aby usunąć obraz.",
+    "picture_deleted": "Obraz usunięty: {{filename}}",
+    "click_to_delete_picture": "Kliknij aby usunąć obraz: {{filename}}",
     "bold": "pogrubienie",
     "italic": "kursywa",
     "subscript": "pod-skrypt",
@@ -419,7 +419,7 @@
     "hard": "Trudna",
     "per_second": "Na sekundę",
     "featured": "Zalecane",
-    "failed_to_delete_picture": "Nie udało się usunąć obrazka.",
+    "failed_to_delete_picture": "Nie udało się usunąć obrazka: {{filename}}",
     "purge_warning": "Ostrzeżenie: Czyszczenie spowoduje usunięcie tego elementu i wszystkich jego elementów podrzędnych z bazy danych. Nie będzie można odzyskać danych. Używaj z najwyższą ostrożnością.",
     "subscribe_pending": "Oczekiwanie na subskrypcję",
     "interface_language": "Język interfejsu",
