--- a/translations/pt.json
+++ b/translations/pt.json
@@ -85,7 +85,7 @@
     "delete": "apagar",
     "deleted": "apagado pelo autor",
     "delete_account": "Eliminar conta",
-    "click_to_delete_picture": "Clica para eliminar a imagem.",
+    "click_to_delete_picture": "Clica para eliminar a imagem: {{filename}}",
     "restore": "restaurar",
     "ban": "banir",
     "ban_from_site": "banir do site",
@@ -124,7 +124,7 @@
     "admins": "administradores",
     "only_admins_can_create_communities": "Apenas os administradores podem criar comunidades",
     "delete_account_confirm": "Aviso: esta ação irá eliminar permanentemente todos os teus dados desta instância. Estes poderão não ser eliminados noutras instâncias existentes. Insere a tua palavra-passe para confirmar.",
-    "picture_deleted": "Imagem eliminada.",
+    "picture_deleted": "Imagem eliminada: {{filename}}",
     "save": "guardar",
     "email_or_username": "Email ou nome de utilizador",
     "number_of_points": "{{formattedCount}} ponto",
