--- a/translations/pt_BR.json
+++ b/translations/pt_BR.json
@@ -231,8 +231,8 @@
     "number_of_downvotes_plural": "{{formattedCount}} votos negativos",
     "show_context": "Mostrar contexto",
     "invalid_community_name": "Nome inválido.",
-    "click_to_delete_picture": "Clique para deletar imagem.",
-    "picture_deleted": "Imagem removida.",
+    "click_to_delete_picture": "Clique para deletar imagem: {{filename}}",
+    "picture_deleted": "Imagem removida: {{filename}}",
     "admin_settings": "Configurações de Admin",
     "site_config": "Configuração do Site",
     "banned_users": "Pessoas Banidas",
@@ -420,7 +420,7 @@
     "filter_by_action": "Filtrar por ação",
     "filter_by_mod": "Filtrar por mod",
     "only_mods_can_post_in_community": "Somente a moderação pode publicar nessa comunidade",
-    "failed_to_delete_picture": "Falha ao deletar imagem.",
+    "failed_to_delete_picture": "Falha ao deletar imagem: {{filename}}",
     "purge_user": "expurgar usuárie",
     "purge": "expurgar",
     "purge_post": "expurgar publicação",
