--- a/translations/ru.json
+++ b/translations/ru.json
@@ -233,8 +233,8 @@
     "number_online_1": "{{formattedCount}} пользователя онлайн",
     "number_online_2": "{{formattedCount}} пользователей онлайн",
     "invalid_community_name": "Неверное имя.",
-    "picture_deleted": "Изображение удалено.",
-    "click_to_delete_picture": "Нажмите, для удаления изображения.",
+    "picture_deleted": "Изображение удалено: {{filename}}",
+    "click_to_delete_picture": "Нажмите, для удаления изображения: {{filename}}",
     "downvotes_disabled": "Голосование не понравилось отключено",
     "upvote": "Понравился",
     "enable_downvotes": "Включить голосование не понравился",
