--- a/translations/sq.json
+++ b/translations/sq.json
@@ -61,8 +61,8 @@
     "mark_as_unread": "shëno si të palexuar",
     "delete": "fshije",
     "delete_account": "Fshije Account-in",
-    "click_to_delete_picture": "Shtyp për të fshirë imazhin.",
-    "picture_deleted": "Imazhi është fshirë.",
+    "click_to_delete_picture": "Shtyp për të fshirë imazhin: {{filename}}",
+    "picture_deleted": "Imazhi është fshirë: {{filename}}",
     "restore": "riktheje",
     "ban": "dëboje",
     "ban_from_site": "dëboje nga faqja",
