--- a/translations/sv.json
+++ b/translations/sv.json
@@ -178,8 +178,8 @@
     "couldnt_update_user": "Kunde inte uppdatera användare.",
     "system_err_login": "Systemfel. Försök att logga ut och sedan in igen.",
     "invalid_community_name": "Ogiltigt namn.",
-    "click_to_delete_picture": "Klicka för att ta bort bild.",
-    "picture_deleted": "Bilden har raderats.",
+    "click_to_delete_picture": "Klicka för att ta bort bild: {{filename}}",
+    "picture_deleted": "Bilden har raderats: {{filename}}",
     "upload_avatar": "Ladda upp profilbild",
     "enable_nsfw": "Aktivera NSFW",
     "sorting_help": "sorteringshjälp",
