--- a/translations/tr.json
+++ b/translations/tr.json
@@ -23,8 +23,8 @@
     "delete": "sil",
     "deleted": "yazar tarafından silindi",
     "delete_account": "Hesabı Sil",
-    "click_to_delete_picture": "Resmi silmek için tıklayın.",
-    "picture_deleted": "Resim silindi.",
+    "click_to_delete_picture": "Resmi silmek için tıklayın: {{filename}}",
+    "picture_deleted": "Resim silindi: {{filename}}",
     "restore": "geri al",
     "ban_from_site": "siteden yasakla",
     "unban": "yasağı kaldır",
