--- a/translations/uk.json
+++ b/translations/uk.json
@@ -232,8 +232,8 @@
     "number_online_1": "{{count}} Користувач онлайн",
     "number_online_2": "{{count}} Користувачів онлайн",
     "invalid_community_name": "Неправильне ім'я користувача.",
-    "picture_deleted": "Зображення видалені.",
-    "click_to_delete_picture": "Натисніть, щоб видалити зображення.",
+    "picture_deleted": "Зображення видалені: {{filename}}",
+    "click_to_delete_picture": "Натисніть, щоб видалити зображення: {{filename}}",
     "downvotes_disabled": "Від'ємне голосування вимкненно.",
     "upvote": "Голосувати за",
     "enable_downvotes": "Ввімкнути від'ємне голосування",
