--- a/translations/vi.json
+++ b/translations/vi.json
@@ -99,8 +99,8 @@
     "mark_as_unread": "đánh dấu là chưa đọc",
     "delete": "xoá",
     "delete_account": "Xoá tài khoản",
-    "click_to_delete_picture": "Nhấn để xoá hình.",
-    "picture_deleted": "Đã xoá hình.",
+    "click_to_delete_picture": "Nhấn để xoá hình: {{filename}}",
+    "picture_deleted": "Đã xoá hình: {{filename}}",
     "restore": "khôi phục",
     "ban": "cấm",
     "unban": "ngưng cấm",
