--- a/translations/en.json
+++ b/translations/en.json
@@ -115,9 +115,10 @@
     "delete_account": "Delete Account",
     "delete_account_confirm":
       "Warning: this will permanently delete all of your data from this instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
-    "click_to_delete_picture": "Click to delete picture.",
-    "failed_to_delete_picture": "Failed to delete picture.",
-    "picture_deleted": "Picture deleted.",
+    "click_to_delete_picture": "Click to delete picture: {{filename}}",
+    "failed_to_delete_picture": "Failed to delete picture: {{filename}}",
+    "picture_deleted": "Picture deleted: {{filename}}",
+    "pictures_uploded_progess": "{{uploaded}}/{{total}} pictures uploaded",
     "restore": "restore",
     "ban": "ban",
     "ban_from_site": "ban from site",
