Add loading translation key (#35)
* Add loading translation key

* Remove prettier formatting changes

--- a/translations/en.json
+++ b/translations/en.json
@@ -106,6 +106,7 @@
     "remove": "remove",
     "removed": "removed by mod",
     "locked": "locked",
+    "loading": "Loading",
     "stickied": "stickied",
     "reason": "Reason",
     "mark_as_read": "mark as read",
