--- a/translations/en.json
+++ b/translations/en.json
@@ -255,6 +255,7 @@
   "interface_language": "Interface Language",
   "language": "Language",
   "language_plural": "Languages",
+  "language_select_placeholder": "Select language",
   "undetermined_language_warning": "Warning: If you deselect Undetermined, you will not see most content.",
   "browser_default": "Browser Default",
   "downvotes_disabled": "Downvotes disabled",
