Add error page translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -225,6 +225,11 @@
   "login": "Login",
   "sign_up": "Sign Up",
   "notifications_error": "Desktop notifications not available in your browser. Try Firefox or Chrome.",
+  "error_page_title": "Error!",
+  "error_page_paragraph": "There was an error on the server. Try refreshing your browser. If that doesn't work, come back at a later time. If the problem persists, you can seek help in the <1>Lemmy support community</1> or <2>Lemmy Matrix room</2>.",
+  "error_page_admin_matrix": "If you would like to reach out to one of {{instance}} admins for support, try the following Matrix addresses:",
+  "not_found_page_title": "Page Not Found",
+  "not_found_return_home_button": "Click here to return to your homepage",
   "websocket_disconnected": "Websocket disconnected",
   "websocket_reconnected": "Websocket reconnected",
   "unread_messages": "{{formattedCount}} Unread Message",
