--- a/translations/en.json
+++ b/translations/en.json
@@ -229,6 +229,7 @@
   "error_page_paragraph": "There was an error on the server. Try refreshing your browser. If that doesn't work, come back at a later time. If the problem persists, you can seek help in the <1>Lemmy support community</1> or <2>Lemmy Matrix room</2>.",
   "error_page_admin_matrix": "If you would like to reach out to one of {{instance}} admins for support, try the following Matrix addresses:",
   "not_found_page_title": "Page Not Found",
+  "not_found_page_message": "The page you are looking for does not exist.",
   "not_found_return_home_button": "Click here to return to your homepage",
   "websocket_disconnected": "Websocket disconnected",
   "websocket_reconnected": "Websocket reconnected",
