Add rate limit translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -228,6 +228,7 @@
   "error_page_title": "Error!",
   "error_page_paragraph": "There was an error on the server. Try refreshing your browser. If that doesn't work, come back at a later time. If the problem persists, you can seek help in the <1>Lemmy support community</1> or <1>Lemmy Matrix room</1>.",
   "error_page_admin_matrix": "If you would like to reach out to one of {{instance}} admins for support, try the following Matrix addresses:",
+  "error_code_message": "The server returned this error: <1>{{error}}</1>. This may be useful for admins and developers to diagnose and fix the error",
   "not_found_page_title": "Page Not Found",
   "not_found_page_message": "The page you are looking for does not exist.",
   "not_found_return_home_button": "Click here to return to your homepage",
@@ -448,13 +449,15 @@
   "captcha_difficulty": "Captcha difficulty",
   "easy": "Easy",
   "hard": "Hard",
-  "rate_limit_message": "Message rate limit",
-  "rate_limit_post": "Post rate limit",
-  "rate_limit_register": "Register rate limit",
-  "rate_limit_image": "Image rate limit",
-  "rate_limit_comment": "Comment rate limit",
-  "rate_limit_search": "Search rate limit",
-  "per_second": "Per second",
+  "rate_limit": "Rate Limit",
+  "rate_limit_message": "Message",
+  "rate_limit_post": "Post",
+  "rate_limit_register": "Register",
+  "rate_limit_image": "Image",
+  "rate_limit_comment": "Comment",
+  "rate_limit_search": "Search",
+  "rate_limit_header": "Rate Limit Options",
+  "per_second": "Per Second",
   "taglines": "Taglines",
   "add_tagline": "Add Tagline",
   "featured": "Featured",
