Add rate limit translations (#46)

--- a/translations/en.json
+++ b/translations/en.json
@@ -449,13 +449,15 @@
   "captcha_difficulty": "Captcha difficulty",
   "easy": "Easy",
   "hard": "Hard",
-  "rate_limit_message": "Message rate limit",
-  "rate_limit_post": "Post rate limit",
-  "rate_limit_register": "Register rate limit",
-  "rate_limit_image": "Image rate limit",
-  "rate_limit_comment": "Comment rate limit",
-  "rate_limit_search": "Search rate limit",
-  "per_second": "Per second",
+  "rate_limit": "Rate Limit",
+  "rate_limit_message": "Message",
+  "rate_limit_post": "Post",
+  "rate_limit_register": "Register",
+  "rate_limit_image": "Image",
+  "rate_limit_comment": "Comment",
+  "rate_limit_search": "Search",
+  "rate_limit_header": "Rate Limit Options",
+  "per_second": "Per Second",
   "taglines": "Taglines",
   "add_tagline": "Add Tagline",
   "featured": "Featured",
