--- a/translations/de.json
+++ b/translations/de.json
@@ -1,5 +1,5 @@
 {
-  "post": "Beitrag",
+  "post": "beitragen",
   "remove_post": "Beitrag löschen",
   "no_posts": "Keine Beiträge.",
   "create_a_post": "Erstelle einen Beitrag",
