--- a/translations/hi.json
+++ b/translations/hi.json
@@ -62,5 +62,6 @@
   "remove_as_mod": "मध्यथ के स्थान से हटाएँ",
   "admins": "प्रशासकों",
   "remove_as_admin": "प्रशासक के स्थान से हटाएँ",
-  "appoint_as_admin": "प्रशासक के रूप में नियुक्त करें"
+  "appoint_as_admin": "प्रशासक के रूप में नियुक्त करें",
+  "jump_to_content": "सामग्री पर जाएँ"
 }
