--- a/translations/en.json
+++ b/translations/en.json
@@ -38,7 +38,7 @@
   "send_secure_message": "Send Secure Message",
   "send_message": "Send Message",
   "message": "Message",
-  "edit": "edit",
+  "edit": "Edit",
   "reply": "reply",
   "more": "more",
   "cancel": "Cancel",
