--- a/translations/en.json
+++ b/translations/en.json
@@ -489,5 +489,8 @@
   "two_factor_setup_instructions": "After you click save, and the page reloads, scroll down and click '2FA installation link' to add it to your authenticator.",
   "remove_two_factor": "Remove 2-factor authentication",
   "two_factor_token": "2FA Token",
-  "jump_to_content": "Jump to content"
+  "jump_to_content": "Jump to content",
+  "cant_enable_private_instance_if_federation_enabled": "Can't enable private instance if federation is also enabled",
+  "cant_enable_federation_if_private_instance": "Can't enable federation if private instance is also enabled"
+
 }
